--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -4,159 +4,56 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Example with Bootstrap</title>
+    <title>Checkforce.js</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <style>
-    :root {
-      --bg-color: #f5f5f5;
-      --color-success: #5cb85c;
-      --color-warning: #f0ad4e;
-      --color-danger: #df2930;
-    }
-  
-    /* Tooltip */
-
-    #checkforce-tooltip {
-      background: #ffffff;
-      border-radius: 6px;
-      padding: 1.2rem;
-      /* display: none; */
-      box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
-    }
-    #checkforce-tooltip[data-show] {
-      display: block;
-    }
-
-    #arrow,
-    #arrow::before {
-      position: absolute;
-      width: 8px;
-      height: 8px;
-      background: inherit;
-    }
-    #arrow {
-      visibility: hidden;
-    }
-
-    #arrow::before {
-      visibility: visible;
-      content: '';
-      transform: rotate(45deg);
-    }
-    #checkforce-tooltip[data-popper-placement^='top'] > #arrow {
-      bottom: -4px;
-    }
-
-    #checkforce-tooltip[data-popper-placement^='bottom'] > #arrow {
-      top: -4px;
-    }
-
-    #checkforce-tooltip[data-popper-placement^='left'] > #arrow {
-      right: -4px;
-    }
-
-    #checkforce-tooltip[data-popper-placement^='right'] > #arrow {
-      left: -4px;
-    }
-
-    /* Progress */
-
-    .checkforce-progress {
-      display: flex;
-    }
-    .checkforce-progress .checkforce-progress-title {
-      width: 70px;
-    }
-    .checkforce-progress .checkforce-progress-level {
-      width: 158px;
-      height: 9px;
-      margin: .6rem;
-      display: flex;
-    }
-
-    .checkforce-progress.danger .progress-bar--danger {
-      background-color: var(--color-danger) !important;
-    }
-
-    .checkforce-progress.warning .progress-bar--danger {
-      background-color: var(--color-warning) !important;
-    }
-    .checkforce-progress.warning .progress-bar--warning {
-      background-color: var(--color-warning) !important;
-    }
-
-    .checkforce-progress.success .progress-bar--danger {
-      background-color: var(--color-success) !important;
-    }
-    .checkforce-progress.success .progress-bar--warning {
-      background-color: var(--color-success) !important;
-    }
-    .checkforce-progress.success .progress-bar--success {
-      background-color: var(--color-success) !important;
-    }
-
-    .checkforce-progress-bar {
-      margin: 0.1rem;
-      background-color: #e1e3e5;
-      -webkit-border-radius: 4px;
-      -moz-border-radius: 4px;
-      border-radius: 4px;
-      -webkit-transition: width 0.6s ease;
-      -o-transition: width 0.6s ease;
-      transition: width 0.6s ease;
-    }
-    </style>
+    <!-- Custom styles for this template -->
+    <link href="_root.css" rel="stylesheet">
+    <link href="_popover.css" rel="stylesheet">
+    <link href="_style.css" rel="stylesheet">
 
   </head>
   <body>
     <div class="container">
-      <h1 class="mt-5">CheckForce.js</h1>
-      <h3 class="mb-5">Checando a força da senha</h3>
+      <main class="form-signin">
+        <form>
+          <img class="mb-4 m-auto" style="width: 300px" src="../logo.svg" alt="" width="72" height="57">
+          <h1 class="h3 mb-3 fw-normal text-center">Registrar conta</h1>
 
-      <div class="row">
-        <div class="col">
-          <div class="card text-dark bg-light mb-3">
-            <div class="card-body p-4">
-              <h3 class="mb-4">Criar uma nova conta</h3>
-              <form>
-                <div class="mb-3">
-                  <label for="input-name" class="form-label">Nome</label>
-                  <input type="text" class="form-control" id="input-name" aria-describedby="Nome">
-                </div>
-                <div class="mb-3">
-                  <label for="input-email" class="form-label">E-mail</label>
-                  <input type="text" class="form-control" id="input-email" aria-describedby="E-mail">
-                </div>
-                <div class="mb-3">
-                  <label for="input-password" class="form-label">Senha</label>
-                  <input type="password" class="form-control" id="input-password" aria-describedby="Criar senha">
-                </div>
-                <button type="submit" class="btn btn-primary">Criar conta</button>
-              </form>
-            </div>
+          <div class="form-floating">
+            <input type="text" class="form-control" id="floatingInputName" placeholder="name@example.com">
+            <label for="floatingInput">Nome</label>
           </div>
-        </div>
-      </div>
+
+          <div class="form-floating">
+            <input type="text" class="form-control" id="floatingInputEmail" placeholder="name@example.com">
+            <label for="floatingInput">E-mail</label>
+          </div>
+
+          
+          <div class="form-floating">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Senha">
+            <label for="floatingPassword">Senha</label>
+          </div>
+
+          <div class="checkbox mb-3 text-center">
+            <label>
+              <input type="checkbox" value="remember-me"> Lembre-me
+            </label>
+          </div>
+          <button class="w-100 btn btn-lg btn-primary" type="submit">Criar</button>
+          <p class="mt-5 mb-3 text-center text-muted">&copy; checkforce.js</p>
+        </form>
+      </main>
     </div>
 
     <!-- Include library -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-
-    <script src="../../node_modules/zxcvbn/dist/zxcvbn.js"></script> -->
-    
     <script src="../../dist/checkforce.bundle.js"></script>
-    <!-- <script src="../../dist/checkforce.js"></script> -->
-    <!-- <script src="../../dist/checkforce.bundle.min.js"></script> -->
     <script>
-      const checkForce = new CheckForce('#input-password', {
-        // placement: 'bottom'
-        // template: 'Novo template'
-      });
+      const checkForce = new CheckForce('#floatingPassword', { placement: 'right' });
     </script>
 
   </body>
